--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -20,6 +20,10 @@
         xmlns:settings="http://schemas.android.com/apk/res-auto"
         android:title="@string/about_settings">
 
+     <!--XPERIENCE HEADER-->
+	 <PreferenceScreen android:key="rr_logo"
+			   android:layout="@layout/logo_rr" />
+     
         <!-- System update settings - launches activity -->
         <!--PreferenceScreen android:key="system_update_settings"
                 android:title="@string/system_update_settings_list_item_title"
